- Added server side validation for fileupload ajax call - added utility method to get resource bundle and formate message in PetstoreUtil class (getMessage) to get used for I18N message display to users - Added MessageStrings.properties resource bundle
Issue number:
Obtained from:
Submitted by:
Reviewed by: